--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
   <body>
       <h1>วิชา SC362002 Mobile Web Application </h1>
+        <ul>
+          <li>งานที่1</li>
+          <li>งานที่2</li>
+          <li>งานที่3</li>
+        </ul>
+    <p>นางสาวฐิติมา  บุญพรมมา 663380154-6</p>
   </body>
 </html>
