--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
+  <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+      body{
+        font-family: "Itim", cursive;
+      }
+  </style>
+    </head>
   <body>
+  
       <h1>วิชา SC362002 Mobile Web Application </h1>
         <ul>
           <li>งานที่1</li>
