--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   
       <h1>วิชา SC362002 Mobile Web Application </h1>
         <ul>
-          <li>งานที่1</li>
+          <li><a href="ass1/work.html">งานที่1</a></li>
           <li>งานที่2</li>
           <li>งานที่3</li>
+          
+
         </ul>
     <p>นางสาวฐิติมา  บุญพรมมา 663380154-6</p>
   </body>
