--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
       <h1>วิชา SC362002 Mobile Web Application </h1>
         <ul>
-          <li><a href="ass1/work.html">งานที่1</a></li>
+          <li><a href="ass1/work1.html">งานที่1</a></li>
           <li>งานที่2</li>
           <li>งานที่3</li>
           
