--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>วิชา SC362002 Mobile Web Application </h1>
         <ul>
           <li><a href="ass1/work1.html">งานที่1</a></li>
-          <li>งานที่2</li>
+          <li><a href="ass2/work2.html">งานที่2</a></li>
           <li>งานที่3</li>
           
 
