--- a/ass1/work1.html
+++ b/ass1/work1.html
@@ -257,7 +257,41 @@
             "ทะเลแหวก"
         ],
         "answer": 3
-    }
+    },
+    {
+    "title": "ข้อใดเป็นชื่อของแม่น้ำในประเทศไทย?",
+    "options": [
+        "แม่น้ำโขง",
+        "แม่น้ำเจ้าพระยา",
+        "แม่น้ำไนล์",
+        "แม่น้ำแยงซี",
+        "แม่น้ำอะเมซอน"
+    ],
+    "answer": 2
+},
+{
+    "title": "ข้อใดเป็นการกระทำที่แสดงถึงวัฒนธรรมไทย?",
+    "options": [
+        "การล้างมือก่อนกินข้าว",
+        "การไหว้",
+        "การนั่งไขว่ห้าง",
+        "การกินอาหารด้วยมือ",
+        "การจับมือทักทาย"
+    ],
+    "answer": 2
+},
+{
+    "title": "ข้อใดเป็นสถานที่สำคัญในกรุงเทพมหานคร?",
+    "options": [
+        "วัดพระแก้ว",
+        "วัดอรุณ",
+        "วัดโพธิ์",
+        "วัดเบญจมบพิตร",
+        "ทั้งหมดถูกต้อง"
+    ],
+    "answer": 5
+}
+
   ];
 </script>
 
