--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <li><a href="ass1/work1.html">งานที่1</a></li>
           <li><a href="ass2/work2.html">งานที่2</a></li>
           <li>งานที่3</li>
+          <li>งานที่4</li>
           
 
         </ul>
