--- a/ass4/work4.html
+++ b/ass4/work4.html
@@ -21,7 +21,7 @@
       <a-entity gltf-model="Spaceship.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="4.5 3 -7.3"></a-entity>
       <a-text value="Thitima Boonpromma 
       663380154-6 IT Sec1" position="-4 5 -5.5" color="#ffff00" font="mozillavr" scale="2.5 2.5 2"></a-text>
-      <a-text value="khon kaen university" position="-4 4 -5.5" color="#ffcc00" font="mozillavr" scale="2.5 2.5 2"></a-text>
+      <a-text value="Khon Kaen University" position="-4 4 -5.5" color="#ffcc00" font="mozillavr" scale="2.5 2.5 2"></a-text>
       <a-image src="LogoKKU.png" position="-5.3 4 -5" width="2" height="2"></a-image>
       <a-entity gltf-model="Snowflakes.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="2.3 4.2 -5.5"></a-entity>
       <a-entity gltf-model="snowman.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="-3 0 -3"></a-entity>
