--- a/ass4/work4.html
+++ b/ass4/work4.html
@@ -18,12 +18,14 @@
       <a-sky src="pexels-francesco-ungaro-30201311.jpg" rotation="0 -130 0"></a-sky>
       <a-entity gltf-model="Citizen 3.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="0 0.45905 -4.41752"></a-entity>
       <a-plane rotation="-90 0 0" width="10" height="10" color="#FFFFFF"></a-plane>
-      <a-entity gltf-model="Spaceship.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="4.5 3 -7.3"></a-entity>
+      <a-entity gltf-model="Spaceship.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="4.5 3 -7.3"></a-entity 
+      animation="property: position; to: 5 3.5 -7.3; dur: 3000; dir: alternate; loop: true" animation__rotation="property: rotation; to: 0 0 0; dur: 4000; loop: true">
       <a-text value="Thitima Boonpromma 
       663380154-6 IT Sec1" position="-4 5 -5.5" color="#ffff00" font="mozillavr" scale="2.5 2.5 2"></a-text>
       <a-text value="Khon Kaen University" position="-4 4 -5.5" color="#ffcc00" font="mozillavr" scale="2.5 2.5 2"></a-text>
       <a-image src="LogoKKU.png" position="-5.3 4 -5" width="2" height="2"></a-image>
-      <a-entity gltf-model="Snowflakes.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="2.3 4.2 -5.5"></a-entity>
+      <a-entity gltf-model="Snowflakes.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="2.3 4.2 -5.5"
+        animation__rotation="property: rotation; to: 360 360 0; dur: 9000; loop: true"></a-entity>
       <a-entity gltf-model="snowman.glb" animation-mixer="clip:*" scale="0.5 0.5 0.5" position="-3 0 -3"></a-entity>
       
 
