--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li><a href="ass2/work2.html">งานที่2</a></li>
           <li>งานที่3</li>
           <li><a href="ass4/work4.html">งานที่4</a></li>
+           <li><a href="ass5/work5.html">งานที่5</a></li>
           
 
         </ul>
