--- a/ass5/work5.html
+++ b/ass5/work5.html
@@ -10,8 +10,8 @@
     <div data-snack-id="@nongwow1122/intrigued-violet-bubblegum" data-snack-platform="web" data-snack-preview="false" data-snack-theme="dark" style="overflow:hidden;background:#0C0D0E;border:1px solid var(--color-border);border-radius:4px;height:505px;width:100%"></div>
     <script async src="https://snack.expo.dev/embed.js"></script> 
     <br>
-    <div data-snack-id="@nongwow1122/49d9dc" data-snack-platform="web" data-snack-preview="false" data-snack-theme="dark" style="overflow:hidden;background:#0C0D0E;border:1px solid var(--color-border);border-radius:4px;height:505px;width:100%"></div>
-<script async src="https://snack.expo.dev/embed.js"></script>
+   <div data-snack-id="@nongwow1122/49d9dc" data-snack-platform="web" data-snack-preview="false" data-snack-theme="light" style="overflow:hidden;background:#fbfcfd;border:1px solid var(--color-border);border-radius:4px;height:505px;width:100%"></div>
+   <script async src="https://snack.expo.dev/embed.js"></script>
     <br>
     <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/JmW8cRqn1Lw" 
